--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                   </div>
                 </div>
               </div>
-              <h4 class="copy_right_footer">
+              <div class="copy_right_footer">
                 Developed by Sanchita Subramaniam
-            </h4>
+              </div>
         </center>
         <script src="main.js"></script>
     </body>
